# NOVA

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  1  ANSATZ_README.md  CHANGELOG.md  CIRCUIT_TRANSPILER_GUIDE.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  HARDWARE_INTEGRATION_README.md  HARDWARE_SETUP.md  LICENSE  OPTIMIZER_GUIDE.md  OVERVIEW.md  QUANTUM_HARDWARE_INTERFACE.md  README.md  SUPPORT.md  advanced_optimizers.py  ansatz_circuits.py  ansatz_comparison_gui.py  basic_qnn_test.py  cli_input.txt  cli_interface.py  force_install_dependencies.sh  function_calls  gui_interface.py  matplotlibrc  minimal_test.py  optimizer_benchmarks.py  pre-commit-config.yaml  pyproject.toml  pyrightconfig.json  qnn_molecular_energy.py  quantum_circuit_transpiler.py  quantum_error_handling.py  quantum_error_mitigation.py  quantum_hardware.py  quantum_hardware_analytics.py  quantum_hardware_enhanced.py  (+12 more)
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  release.yml
benchmark_results_2025-03-12_12-05-52/: benchmark_report.md  benchmark_results.json  benchmark_results.pkl
benchmark_results_2025-03-12_12-09-57/: benchmark_report.md  benchmark_results.json  benchmark_results.pkl
benchmark_results_2025-03-12_12-13-32/: benchmark_report.md  benchmark_results.json  benchmark_results.pkl
docs/: api.rst  conf.py  faq.md  index.rst  overview.md  requirements.txt
docs/tutorials/: hardware_execution.rst  index.rst  qnn_quickstart.rst
examples/: basic_qnn_test.py  hardware_execution.ipynb  minimal_test.py  optimizer_benchmarks.py  qnn_quickstart.ipynb  simple_circuit.py
qnn_env/: pyvenv.cfg
scripts/: cli_interface.py  qnn_launcher.py
src/nova/ansatz/: ansatz_circuits.py
src/nova/cli/: __main__.py
src/nova/core/: advanced_optimizers.py  qnn_molecular_energy.py  quantum_logger.py
src/nova/gui/: ansatz_comparison_gui.py  gui_interface.py  launch.py
src/nova/hardware/: quantum_error_handling.py  quantum_hardware.py  quantum_hardware_analytics.py  quantum_hardware_enhanced.py  quantum_hardware_interface.py
src/nova/mitigation/: quantum_error_mitigation.py
src/nova/transpiler/: quantum_circuit_transpiler.py
tests/ansatz/: test_ansatz.py
tests/core/: test_qnn.py
tests/hardware/: quantum_hardware_interface_test.py  quantum_hardware_test.py  test_hardware_analytics.py
tests/transpiler/: test_circuit_transpiler.py
